src/objects/NDTRS_Form_2016__c.object
<CustomObject>
    <fields>
        <fullName>Ever_Received_OpiateSub__c</fullName>
        <formula>CASE( TEXT(  X20a_Ever_received_any_opiate_substituti__c  ),
&quot;1. Previously received&quot;,&quot;1&quot;,
&quot;2. Never received&quot;,&quot;2&quot;,
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ever_Received_OpiateSub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ever_been_convicted_of_a_sexual_offence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you ever been convicted of a sexual offence?</inlineHelpText>
        <label>Ever been convicted of a sexual offence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_been_convicted_of_an_assault__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you ever been convicted of an assault?</inlineHelpText>
        <label>Ever been convicted of an assault?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_been_on_Community_Employment_Progr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you ever been on a Community Employment (CE) Programme?</inlineHelpText>
        <label>Ever been on Community Employment Progr.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_had_an_overdose__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you ever had an overdose, either accidental or intentional?</inlineHelpText>
        <label>Ever had an overdose?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_had_any_eating_disorders__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have or have you ever had any eating disorders?</inlineHelpText>
        <label>Ever had any eating disorders?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_linkedin_addiction_homeless_service__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you linked in with addiction or homeless services before?</inlineHelpText>
        <label>Ever linkedin addiction/homeless service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_suffered_from_received_treatment__c</fullName>
        <inlineHelpText>Have you ever suffered from or received treatment for any of the following?</inlineHelpText>
        <label>Ever suffered from/received treatment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Bipolar Disorder</fullName>
                </value>
                <value>
                    <fullName>Schizophrenia</fullName>
                </value>
                <value>
                    <fullName>Mood Disorders</fullName>
                </value>
                <value>
                    <fullName>Any other psychiatric condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ever_think_about_committing_suicide__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you ever think about committing suicide?</inlineHelpText>
        <label>Ever think about committing suicide?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExitAfter__c</fullName>
        <formula>Case(X38a_Aftercare_provided_by_this_centre__c, 
&quot;1. Yes&quot;,&quot;1&quot;,
&quot;&quot;)</formula>
        <label>ExitAfter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExitConditionUnknown__c</fullName>
        <formula>if(includes(X34_Client_s_Condition_on_discharge__c, &quot;99. Not known&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExitConditionUnknown</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExitCondition__c</fullName>
        <description>This covers exit conditions 1 to 16</description>
        <formula>if(includes(X34_Client_s_Condition_on_discharge__c, &quot;1. Drug free&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;2. Drug use unchanged&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;3. Drug use increased&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;4. Drug use reduced&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;5. Abstaining from alcohol&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;6. Alcohol consumption unchanged&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;7. Alcohol consumption increased&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;8. Alcohol consumption reduced&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;10. Substantially reached priority goals&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;11. Engaging with care plan&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;12. Disengaged from care plan&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;13. Care plan gaps and blocks identified&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;14. Engaging with other services&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;15. Engaging with other therapeutic srvs&quot;),&quot;1,&quot;,&quot;0,&quot;)  &amp; 
if(includes(X34_Client_s_Condition_on_discharge__c, &quot;16. Engaged in other unstruct aftercare&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
        <label>ExitCondition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExitDate__c</fullName>
        <formula>DATEVALUE(TEXT(  X35_Date_of_Final_Discharge_or_transfer__c ))</formula>
        <label>ExitDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Alcohol_Free__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;5. Abstaining from alcohol&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Alcohol_Free</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Alcohol_Increased__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;7. Alcohol consumption increased&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Alcohol_Increased</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Alcohol_Reduced__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;8. Alcohol consumption reduced&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Alcohol_Reduced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Alcohol_UnChanged__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;6. Alcohol consumption unchanged&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Alcohol_UnChanged</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Careplan_Gaps__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;13. Care plan gaps and blocks identified&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Careplan_Gaps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Centre__c</fullName>
        <formula>X33a2_Transfer_to_Centre__r.CentreNo__c</formula>
        <label>Exit_Centre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Centre_if_not_in_list__c</fullName>
        <inlineHelpText>Enter centre name if centre not in service provider list</inlineHelpText>
        <label>Exit Centre if not in list</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Disengaged_Careplan__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;12. Disengaged from care plan&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Disengaged_Careplan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Drug_Free__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;1. Drug free&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Drug_Free</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Drug_Increased__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;3. Drug use increased&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Drug_Increased</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Drug_Reduced__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;4. Drug use reduced&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Drug_Reduced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Drug_UnChanged__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;2. Drug use unchanged&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Drug_UnChanged</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Engaging_Careplan__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;11. Engaging with care plan&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Engaging_Careplan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Engaging_Services__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;14. Engaging with other services (e.g. housing, education)&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Engaging_Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Engaging_Therapeutic__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;15. Engaging with other therapeutic services (e.g. self help groups, AA)&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Engaging_Therapeutic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Other__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;17. Other (specify)&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Reached_Goals__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;10. Substantially reached priority goals&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Reached_Goals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Reason__c</fullName>
        <formula>Case(X33a_Exit_details__c, 
&quot;1. Treatment completed&quot;,&quot;1&quot;,
&quot;2. Transferred/referred to treatment in another drug/alcohol service&quot;,&quot;2&quot;,
&quot;4. Client declined further treatment&quot;,&quot;4&quot;,
&quot;5. Client did not return for appointments (no show/DNA)&quot;,&quot;5&quot;,
&quot;6. Premature exit for non-compliance. Specify reason&quot;,&quot;6&quot;,
&quot;7. Released from prison but not linked to other treatment service&quot;,&quot;7&quot;,
&quot;9. Sentenced to prison&quot;,&quot;9&quot;,
&quot;14. Prison to prison transfer&quot;,&quot;14&quot;,
&quot;12. No longer lives in the area&quot;,&quot;12&quot;,
&quot;8. Died&quot;,&quot;8&quot;,
&quot;10. Other (specify)&quot;,&quot;10&quot;,
&quot;&quot;)</formula>
        <label>Exit_Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Unknown__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;99. Not known&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Unknown</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Unstructured_Aftercare__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;16. Engaging in other unstructured aftercare&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit_Unstructured_Aftercare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extent_Problem__c</fullName>
        <description>Old variable AlcoholExtent</description>
        <formula>CASE(X29c_Extent_of_drinking_problem__c,
&quot;2. Hazardous drinker&quot;, &quot;2&quot;,
&quot;3. Harmful drinker&quot;,&quot;3&quot;,
&quot;4. Dependent drinker&quot;,&quot;4&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extent_Problem</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIRSTDRUG__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>FIRSTDRU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIRSTDRUID__c</fullName>
        <label>FIRSTDRUID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Therapy__c</fullName>
        <formula>IF( ISBLANK( X32b9_Date_started__c ) ,&quot;False&quot;,&quot;True&quot;)</formula>
        <inlineHelpText>32a - Family Therapy</inlineHelpText>
        <label>Family_Therapy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Drug_Detail__c</fullName>
        <formula>X27_Specify_first_drug_ever_used__r.Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First_Drug_Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_drug_and_age_first_used__c</fullName>
        <defaultValue>&quot;Please specify age first used any drug and first drug used for this client. If not applicable please enter Q26 = 88 and Q27 = Not Applicable&quot;</defaultValue>
        <label>First drug and age first used</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Edu__c</fullName>
        <formula>IF(ISBLANK(  X32b5_Date_started__c  ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>32a - Group Education/ Awareness Programme</inlineHelpText>
        <label>Group_Edu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIV_Test__c</fullName>
        <formula>CASE( X31c_History_of_HIV_screening__c,
&quot;1. Never tested&quot;,&quot;1&quot;,
&quot;2. Tested in the past 12 months&quot;,&quot;2&quot;,
&quot;3. Tested but not in the last 12 months&quot;,&quot;3&quot;,
&quot;4. Client did not wish to answer&quot;,&quot;4&quot;,
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HIV_Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRBRecord_Name__c</fullName>
        <inlineHelpText>Only to be used for HRB Reports purposes. This field is related to ID and UniqID</inlineHelpText>
        <label>HRBRecord Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_been_to_prison__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have you been to prison?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_attempted_suicide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have you ever attempted suicide?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_convicted_of_arson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have you ever been convicted of arson?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_caused_yourself_any_harm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you ever caused yourself any harm i.e. cutting, biting, burning?</inlineHelpText>
        <label>Have you ever caused yourself any harm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_linked_with_a_psychiatrist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have you ever linked with a psychiatrist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HepB_Test__c</fullName>
        <formula>CASE( X31b_History_of_Hepatitis_B_screening__c,
&quot;1. Never tested&quot;,&quot;1&quot;,
&quot;2. Tested in the past 12 months&quot;,&quot;2&quot;,
&quot;3. Tested but not in the last 12 months&quot;,&quot;3&quot;,
&quot;4. Client did not wish to answer&quot;,&quot;4&quot;,
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HepB_Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HepC_Test__c</fullName>
        <formula>CASE( X31a_History_of_Hepatitis_C_screening__c,
&quot;1. Never tested&quot;,&quot;1&quot;,
&quot;2. Tested in the past 12 months&quot;,&quot;2&quot;,
&quot;3. Tested but not in the last 12 months&quot;,&quot;3&quot;,
&quot;4. Client did not wish to answer&quot;,&quot;4&quot;,
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HepC_Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISConcernedPerson__c</fullName>
        <formula>ispickval(X13_Main_Reason_for_referral__c,&quot;3. Concerned person&quot;)  || X13_2_Drug_specify__r.Item_Code__c = 994</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISConcernedPerson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Drug_Free_how_many_months__c</fullName>
        <label>If Drug Free, how many months?</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_yes_please_specify_medication_for_PH__c</fullName>
        <inlineHelpText>If you are on any medication for your physical health, please specify</inlineHelpText>
        <label>If yes, please specify medication for PH</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_please_specify_treatment_PH__c</fullName>
        <inlineHelpText>If you receiving any treatment for a physical health condition, please specify treatment</inlineHelpText>
        <label>If yes, please specify treatment PH</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Edu__c</fullName>
        <formula>IF(ISBLANK(  X32b4_Date_started__c  ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>32a - Individual Education/ Awareness Programme</inlineHelpText>
        <label>Individual_Edu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Injected_Ever__c</fullName>
        <formula>Case(X30a_Ever_injected__c, 
&quot;1. Yes&quot;,&quot;1&quot;, 
&quot;2. No&quot;,&quot;2&quot;, 
&quot;9. Not Known&quot;,&quot;9&quot;,
&quot;88. Not Applicable&quot;,&quot;88&quot;,
&quot;&quot;)</formula>
        <label>Injected_Ever</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Injected_Frequency__c</fullName>
        <formula>CASE( X30c_Frequency_of_injecting__c,
&quot;1. Injected in the last 30 days&quot;,&quot;1&quot;,
&quot;2. Injected in the last 12 months but not in the last 30 days&quot;,&quot;2&quot;,
&quot;3. Injected but not in the last 12 months&quot;,&quot;3&quot;,
&quot;4. Client did not wish to answer&quot;,&quot;4&quot;,
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;88. Not Applicable&quot;,&quot;88&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Injected Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inter24__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inter24</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterMain__c</fullName>
        <formula>CASE( X32a_Main_Intervention__c , 
&quot;1. Brief intervention&quot;,&quot;1&quot;,
&quot;8. Methadone substitution&quot;,&quot;8&quot;,
&quot;12. Medication free therapy psychosocial therapy other etc&quot;,&quot;12&quot;,
&quot;13. Psychiatric therapy&quot;,&quot;13&quot;,
&quot;14. Individual counselling&quot;,&quot;14&quot;,
&quot;15. Group counselling&quot;,&quot;15&quot;,
&quot;16. Social and/or occupational reintegration&quot;,&quot;16&quot;,
&quot;17. Family Therapy&quot;,&quot;17&quot;,
&quot;18. Brief intervention: individual education/awareness programme&quot;,&quot;18&quot;,
&quot;19. Group education/awareness programme&quot;,&quot;19&quot;,
&quot;20. Aftercare&quot;,&quot;20&quot;,
&quot;21. Complementary therapies&quot;,&quot;21&quot;,
&quot;23. Strengthening family programme&quot;,&quot;23&quot;,
&quot;24. Sent to another site&quot;,&quot;24&quot;,
&quot;&quot;)</formula>
        <label>InterMain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Worker__c</fullName>
        <formula>IF(ISBLANK(  X32b24_Date_started__c  ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>32a - Key worker appointed/ number of key working sessions</inlineHelpText>
        <label>Key_Worker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Problem_Group__c</fullName>
        <formula>X13_2_Drug_specify__r.Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Problem Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medication_Free__c</fullName>
        <formula>IF( ISBLANK( X32b6_Date_started__c ) ,&quot;False&quot;,&quot;True&quot;)</formula>
        <label>Medication_Free</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medication_for_your_physical_health__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you on any medication for your physical health?</inlineHelpText>
        <label>Medication for your physical health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Methadone__c</fullName>
        <formula>IF( ISBLANK( X32b15_Date_started__c ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Methadone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi1__c</fullName>
        <formula>IF(ISBLANK( X32b13_Date_started__c ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multi1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi2__c</fullName>
        <formula>IF(ISBLANK(X32b14_Date_started__c),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multi2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDTRS_2016_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDTRS 2016 Report</label>
        <referenceTo>NDTRS_2016_Report__c</referenceTo>
        <relationshipName>NDTRS_2016_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_probation_officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of probation officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>NDTRS_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_support_with_reading_writing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you need any support with your reading or writing or counting?</inlineHelpText>
        <label>Need support with reading/writing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NonCompliance__c</fullName>
        <formula>Case(X33a6_Reason_for_exit_6_above__c, 
&quot;1. Drug taking&quot;,&quot;1&quot;, 
&quot;2. Violent behaviour&quot;,&quot;2&quot;, 
&quot;3. Illegal activities&quot;,&quot;3&quot;, 
&quot;5. Alcohol taking&quot;,&quot;5&quot;, 
&quot;4. Not observing other rules&quot;,&quot;4&quot;,
&quot;&quot;)</formula>
        <label>NonCompliance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Known__c</fullName>
        <formula>IF( INCLUDES( X34_Client_s_Condition_on_discharge__c,&quot;99. Not known&quot;),&quot;True&quot;,&quot;False&quot;)</formula>
        <label>Not_Known</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_completed_Treatment_CY__c</fullName>
        <formula>Contact__r.Number_of_completed_Treatments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of completed Treatment CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_completed_Treatment__c</fullName>
        <formula>Contact__r.Number_of_completed_Treatments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of completed Treatment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offences__c</fullName>
        <label>Offences</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other2__c</fullName>
        <formula>IF( ISBLANK( X32b28_Date_started__c ) , &quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Problem_History__c</fullName>
        <formula>CASE( TEXT( X19_History_of_treatment_Other__c ) , 
&quot;1. Never treated&quot;,&quot;1&quot;,
&quot;2. Previously treated&quot;,&quot;2&quot;,
&quot;9. Treatment status unknown&quot;,&quot;9&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other_Problem_History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Problem_Name__c</fullName>
        <formula>X17_9_Ohter_specify__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other_Problem_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_info_re_charges_we_should_know__c</fullName>
        <inlineHelpText>Is there any other information about charges that you think we should know?</inlineHelpText>
        <label>Other info re charges we should know</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_info_re_education_we_should_know__c</fullName>
        <inlineHelpText>Is there any other information about your education that you think we should know?</inlineHelpText>
        <label>Other info re education we should know</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_info_re_personal_situation__c</fullName>
        <inlineHelpText>Is there any other information about your personal situation that you think we should know?</inlineHelpText>
        <label>Other info re personal situation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_info_re_your_health_we_should_know__c</fullName>
        <inlineHelpText>Is there any other information about your health that you think we should know?</inlineHelpText>
        <label>Other info re your health we should know</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_info_that_you_think_we_should_know__c</fullName>
        <inlineHelpText>Is there any other information that you think we should know?</inlineHelpText>
        <label>Other info that you think we should know</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRIMDRUGID__c</fullName>
        <label>PRIMDRUGID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placeholder_for_end_section_G__c</fullName>
        <formula>&quot;, , , , , , , , , ,&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Placeholder for
[Inter34] ,[InterCommDate34] ,[InterEndDate34] ,[InterNumber34] 
 ,[Inter35] ,[InterCommDate35] ,[InterEndDate35] ,[InterNumber35]
 [DetoxDrug1] ,[DetoxDrug2] ,[DetoxDrug3]</inlineHelpText>
        <label>Placeholder for end section G</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefer_Alcopops__c</fullName>
        <description>Old variable AlcAlcopops</description>
        <formula>IF( INCLUDES( X29a_Preferred_types_of_alcohol_consumed__c , &quot;7. Alcopops&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefer_Alcopops</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefer_Beer__c</fullName>
        <description>Old variable AlcBeer</description>
        <formula>IF(INCLUDES( X29a_Preferred_types_of_alcohol_consumed__c,&quot;2. Beer&quot;),&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefer_Beer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefer_Cider__c</fullName>
        <description>Old variable AlcCider</description>
        <formula>IF( INCLUDES( X29a_Preferred_types_of_alcohol_consumed__c , &quot;6. Cider&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefer_Cider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefer_Fortified__c</fullName>
        <description>Old variable AlcFortified</description>
        <formula>IF( INCLUDES( X29a_Preferred_types_of_alcohol_consumed__c , &quot;5. Fortified wine&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefer_Fortified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefer_Other_Alcohol__c</fullName>
        <description>Old variable AlcOther</description>
        <formula>IF( INCLUDES( X29a_Preferred_types_of_alcohol_consumed__c , &quot;8. Other&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefer_Other_Alcohol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefer_Spirits__c</fullName>
        <description>Old variable</description>
        <formula>IF( INCLUDES( X29a_Preferred_types_of_alcohol_consumed__c , &quot;3. Spirits&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefer_Spirits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefer_Wine__c</fullName>
        <description>Old variable AlcWine</description>
        <formula>IF( INCLUDES( X29a_Preferred_types_of_alcohol_consumed__c , &quot;4. Wine&quot;) , &quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefer_Wine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premature_Exit_Reason__c</fullName>
        <formula>LEFT( TEXT( X33a6_Reason_for_exit_6_above__c ) , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premature_Exit_Reason</label>
        <type>Text</type>
    </fields>
</CustomObject>